# workshop

./: Dockerfile  Workshop.ipynb  pyproject.toml
