[tool.poetry]
name = "workshop"
version = "0.1.0"
description = ""
authors = ["Benjamin Rotendahl <Benjamin@Rotendahl.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
jupyter = "^1.0.0"
pillow = "^8.0.1"
keras = "^2.4.3"
tqdm = "^4.54.1"
plotly = "^4.14.1"
tensorflow = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
